example/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guindakila
  labels:
    name: guindakila
